Feat/observability integration final (#33)
* feat: add Kubernetes production readiness improvements

Add high availability and stability features for production Kubernetes deployment:

## Pod Disruption Budget (PDB)
- Add PDB for all Raft-based components (ConfigServer, Metaserver shards, ChunkServer)
- Set maxUnavailable: 1 to prevent quorum loss during rolling updates and node maintenance
- Created templates:
  - configserver-pdb.yaml
  - metaserver-pdb.yaml
  - metaserver-shard2-pdb.yaml
  - chunkserver-pdb.yaml

## Pod Anti-Affinity
- Add podAntiAffinity rules to all StatefulSets
- Use preferredDuringSchedulingIgnoredDuringExecution for flexibility
- Distribute pods across nodes (topologyKey: kubernetes.io/hostname)
- Prevents single node failure from losing Raft quorum
- Modified templates:
  - configserver.yaml
  - metaserver.yaml
  - metaserver-shard2.yaml
  - chunkserver.yaml

## Resource Limits
- Add CPU and memory limits for all components in values.yaml
- ConfigServer: 0.5-1 CPU cores, 512MB-1GB RAM
- Metaserver shards: 1-2 CPU cores, 1-2GB RAM each
- ChunkServer: 1-2 CPU cores, 2-4GB RAM
- S3 Server: 0.5-1 CPU cores, 512MB-1GB RAM
- Total cluster minimum: 17 CPU cores, 20GB RAM
- Prevents OOMKilled and ensures predictable resource allocation

## Raft Bug Fixes
- Fix multi-node Raft commit advancement issue in simple_raft.rs
- Fix peer matching logic in AppendEntriesResponse handler
- Fix server_match_indices enumeration bug causing incorrect index mapping
- Multi-node (3 replicas) Raft clusters now correctly commit logs and maintain ShardMap

## Documentation
- Update TODO.md with completed Kubernetes features
- Add remaining tasks for monitoring, backup, network policy, and init containers
- Organize by priority (medium: monitoring/backup, low: network policy/init)

These changes significantly improve cluster availability, stability, and production readiness.

* feat: integrate observability with Prometheus metrics, alerts, and Grafana dashboard

* fix:

--- a/deploy/helm/rust-hadoop/templates/s3server.yaml
+++ b/deploy/helm/rust-hadoop/templates/s3server.yaml
@@ -9,9 +9,9 @@ spec:
   type: ClusterIP
   ports:
     - port: {{ .Values.s3server.port }}
-      targetPort: 9000
+      targetPort: {{ .Values.s3server.port }}
       protocol: TCP
-      name: s3
+      name: s3-metrics
   selector:
     {{- include "rust-hadoop.selectorLabels" . | nindent 4 }}
     component: s3server
@@ -51,19 +51,21 @@ spec:
               value: "http://{{ include "rust-hadoop.fullname" . }}-metaserver-headless:{{ .Values.metaserver.port }}"
             - name: CONFIG_SERVERS
               value: "http://{{ include "rust-hadoop.fullname" . }}-configserver-headless:{{ .Values.configserver.port }}"
+            - name: PORT
+              value: {{ .Values.s3server.port | quote }}
           ports:
-            - containerPort: 9000
-              name: s3
+            - containerPort: {{ .Values.s3server.port }}
+              name: s3-metrics
           livenessProbe:
             tcpSocket:
-              port: 9000
+              port: {{ .Values.s3server.port }}
             initialDelaySeconds: 30
             periodSeconds: 10
             timeoutSeconds: 5
             failureThreshold: 3
           readinessProbe:
             tcpSocket:
-              port: 9000
+              port: {{ .Values.s3server.port }}
             initialDelaySeconds: 10
             periodSeconds: 5
             timeoutSeconds: 3
