--- a/dfs/chunkserver/Cargo.toml
+++ b/dfs/chunkserver/Cargo.toml
@@ -12,8 +12,10 @@ name = "chunkserver"
 path = "src/bin/chunkserver.rs"
 
 [dependencies]
-tonic = "0.14"
-prost = "0.14"
+tonic = { version = "0.12", features = ["tls", "transport"] }
+axum-server = { version = "0.7", features = ["tls-rustls"] }
+axum = "0.8"
+prost = "0.13"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -22,8 +24,9 @@ bytes = "1.0"
 fs2 = "0.4"
 
 crc32fast = "1.5"
-tonic-prost = "0.14"
+# Removed tonic-prost
 uuid = { version = "1.11", features = ["v4"] }
+rustls = { version = "0.23", features = ["ring"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 anyhow = "1.0"
@@ -31,11 +34,10 @@ dfs-common = { path = "../common" }
 dfs-client = { path = "../client" }
 lru = "0.16"
 prometheus = "0.14"
-axum = "0.8"
 
 
 [build-dependencies]
-tonic-prost-build = "0.14"
+tonic-build = "0.12"
 
 [dev-dependencies]
 tempfile = "3.23"
