--- a/dfs/client/Cargo.toml
+++ b/dfs/client/Cargo.toml
@@ -12,24 +12,25 @@ name = "dfs_cli"
 path = "src/bin/dfs_cli.rs"
 
 [dependencies]
-tonic = "0.14"
-prost = "0.14"
+tonic = { version = "0.12", features = ["tls", "transport"] }
+prost = "0.13"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 clap = { version = "4.0", features = ["derive"] }
 bytes = "1.0"
 
-tonic-prost = "0.14"
+# Removed tonic-prost
 uuid = { version = "1.11", features = ["v4"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 anyhow = "1.0"
 rand = "0.8"
+rustls = { version = "0.23", features = ["ring"] }
 dfs-common = { path = "../common" }
 
 [build-dependencies]
-tonic-prost-build = "0.14"
+tonic-build = "0.12"
 
 [dev-dependencies]
 tempfile = "3.23"
