--- a/dfs/common/Cargo.toml
+++ b/dfs/common/Cargo.toml
@@ -4,9 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tonic = "0.14"
+tonic = { version = "0.12", features = ["tls", "transport"] }
 uuid = { version = "1.11", features = ["v4"] }
 tracing = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 crc32fast = "1.3"
+rustls-pemfile = "2.1"
+rustls = { version = "0.23", features = ["ring"] }
+axum-server = { version = "0.7", features = ["tls-rustls"] }
+tokio = { version = "1.0", features = ["full"] }
+anyhow = "1.0"
