--- a/dfs/metaserver/Cargo.toml
+++ b/dfs/metaserver/Cargo.toml
@@ -17,8 +17,8 @@ path = "src/bin/config_server.rs"
 
 
 [dependencies]
-tonic = "0.14"
-prost = "0.14"
+tonic = { version = "0.12", features = ["tls", "transport"] }
+prost = "0.13"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -27,13 +27,15 @@ clap = { version = "4.0", features = ["derive"] }
 
 bytes = "1.0"
 reqwest = { version = "0.13", features = ["json"] }
+axum-server = { version = "0.7", features = ["tls-rustls"] }
 axum = "0.8"
 
 tower-http = { version = "0.6", features = ["trace"] }
 rand = "0.8"
 rocksdb = "0.24"
-tonic-prost = "0.14"
+# Removed tonic-prost
 tracing = "0.1"
+rustls = { version = "0.23", features = ["ring"] }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 anyhow = "1.0"
 dfs-common = { path = "../common" }
@@ -42,7 +44,7 @@ dfs-common = { path = "../common" }
 prometheus = "0.14"
 
 [build-dependencies]
-tonic-prost-build = "0.14"
+tonic-build = "0.12"
 
 [dev-dependencies]
 tempfile = "3.23"
