--- a/dfs/common/Cargo.toml
+++ b/dfs/common/Cargo.toml
@@ -15,3 +15,11 @@ rustls = { version = "0.23", features = ["ring"] }
 axum-server = { version = "0.7", features = ["tls-rustls"] }
 tokio = { version = "1.0", features = ["full"] }
 anyhow = "1.0"
+sha2 = "0.10"
+hmac = "0.12"
+hex = "0.4"
+subtle = "2.5"
+lru = "0.12"
+chrono = "0.4"
+thiserror = "2.0"
+http = "1.1"
